# blueos

./: .env.example  .gitignore  lingui.config.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
backend/: .gitignore  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
backend/bruno_collection/: Get current user organisation accounts.bru  Login clerk.bru  bruno.json
backend/drizzle/: 0000_quiet_blindfold.sql  0001_flowery_excalibur.sql  0002_fancy_nick_fury.sql  0003_glossy_anita_blake.sql  0004_faulty_living_lightning.sql  0005_pretty_ares.sql  0006_wide_supernaut.sql  0007_busy_silver_centurion.sql  0008_bumpy_boom_boom.sql  0009_cultured_dragon_lord.sql  0010_moaning_hydra.sql  0011_tidy_vulture.sql
backend/src/: fastify.d.ts  index.ts
frontend/: .env.example  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vite.config.ts.timestamp-1729601928095-93495c587e6f5.mjs
messages/: en.json  es.json
notifications/: .gitignore  .pylintrc  README.md  docker-compose.yml  pyproject.toml
notifications/notifications/: main.py
notifications/notifications/api/v1/: notifications.py  router.py
notifications/notifications/config/: settings.py
notifications/notifications/db/: prisma.py
notifications/notifications/scripts/: cli.py
notifications/prisma/: schema.prisma
notifications/prisma/migrations/20241113110903_init/: migration.sql
src/: App.tsx  auth.ts  database.types.ts  index.css  main.tsx  middleware.ts  providers.tsx  router.tsx
supabase/: config.toml
(+304 files in other folders)
